--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -26,54 +26,168 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/21-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/21-min.jpg"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/20-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/20-min.jpg"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/19-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/19-min.jpg"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/18-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/18-min.jpg"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/17-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/17-min.jpg"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/16-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/16-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/15-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/15-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/14-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/14-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/13-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/13-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/12-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/12-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/11-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/11-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/10-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/10-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/9-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/9-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/8-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/8-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/7-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/7-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/6-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/6-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/5-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/5-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/4-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/4-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/3-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/3-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/2-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/2-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/1-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/1-min.jpg"
                                                 alt="">
                                 </a>
                                 <h2></h2>
