update image load method

--- a/hyphoto/lolita.html
+++ b/hyphoto/lolita.html
@@ -6,6 +6,12 @@
 <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css">
 </noscript>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.poptrox.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
 
 <body class="is-preload">
         <!-- Wrapper -->
@@ -136,9 +142,4 @@
                 </div>
         </div>
         <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.poptrox.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
