--- a/hyphoto/lightfiredream.html
+++ b/hyphoto/lightfiredream.html
@@ -6,7 +6,12 @@
 <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css">
 </noscript>
-
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.poptrox.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
 <body class="is-preload">
         <!-- Wrapper -->
         <div id="wrapper">
@@ -77,9 +82,4 @@
                 </div>
         </div>
         <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.poptrox.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
