--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -31,6 +31,56 @@
                 </header>
                 <!-- Main -->
                 <div id="main">
+                                <article class="thumb">
+                                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8961-min.jpg" class="image">
+                                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8961-min.jpg"
+                                                                alt="">
+                                                </a>
+                                                <h2></h2>
+                                                <p>
+                                        </article>
+                                        <article class="thumb">
+                                                        <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8964-min.jpg" class="image">
+                                                                <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8964-min.jpg"
+                                                                        alt="">
+                                                        </a>
+                                                        <h2></h2>
+                                                        <p>
+                                                </article>
+                                                <article class="thumb">
+                                                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8960-min.jpg" class="image">
+                                                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8960-min.jpg"
+                                                                                alt="">
+                                                                </a>
+                                                                <h2></h2>
+                                                                <p>
+                                                        </article>
+                                                        <article class="thumb">
+                                                                        <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_7952-min.jpg" class="image">
+                                                                                <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_7952-min.jpg"
+                                                                                        alt="">
+                                                                        </a>
+                                                                        <h2></h2>
+                                                                        <p>
+                                                                </article>
+                                                                <article class="thumb">
+                                                                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_7970-min.jpg
+                                                                                " class="image">
+                                                                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_7970-min.jpg
+                                                                                        "
+                                                                                                alt="">
+                                                                                </a>
+                                                                                <h2></h2>
+                                                                                <p>
+                                                                        </article>
+                                                                        <article class="thumb">
+                                                                                        <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8963-min.jpg" class="image">
+                                                                                                <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/IMG_8963-min.jpg"
+                                                                                                        alt="">
+                                                                                        </a>
+                                                                                        <h2></h2>
+                                                                                        <p>
+                                                                                </article>
                         <article class="thumb">
                                 <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/21-min.jpg" class="image">
                                         <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/21-min.jpg"
