--- a/photo.html
+++ b/photo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>HYPhoto | Frankie人像摄影</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -59,54 +59,64 @@
             <div class="inner">
                 <div class="row">
                     <div class="col-6 col-12-small">
-                        <h3>HYPhoto Scenery Collections</h3>
-                        <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">My Tuchong
-                            Photo Index</a>
-                        <p></p>
-                        <span class="image fit">
-                            <a href="hyphoto/lightfiredream.html"><img src="https://frankieyuan.com/images/disneyfirework.jpg"
-                                    alt="">
-                                <h2>Light, Fire, Dream</h2>
-                            </a>
-                        </span>
-                        <span class="image fit">
-                            <a href="hyphoto/horizon.html"><img src="https://frankieyuan.com/images/OrlandoSea.jpg" alt="">
-                                <h2>Near the Horizon</h2>
-                            </a>
-                        </span>
-                        <span class="image fit">
-                            <a href="hyphoto/city.html"><img src="https://frankieyuan.com/images/NYCbridges.jpg" alt="">
-                                <h2>City in my Mind</h2>
-                            </a>
-                        </span>
-                        <span class="image fit">
-                            <a href="hyphoto/uncate.html"><img src="https://frankieyuan.com/images/airchina.jpg" alt="">
-                                <h2>Cannot be Categorized</h2>
-                            </a>
-                        </span>
-                    </div>
-                    <div class="col-6 col-12-small">
                         <h3>Frankie Portrait Collections</h3>
                         <a href="http://wpa.qq.com/msgrd?v=3&uin=1311009761&site=qq&menu=yes" target="_blank" class="button primary fit">约拍请联系QQ-1311009761</a>
                         <p></p>
                         <span class="image fit">
-                            <a href="/hyphoto/jk.html"><img src="https://frankieyuan.com/images/jk.jpg" alt="">
+                            <a href="/hyphoto/jk.html">
+                                <img src="https://frankieyuan.com/images/jk.jpg" alt="">
                                 <h2>JK</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/lolita.html"><img src="https://frankieyuan.com/images/lolita.jpg" alt="">
+                            <a href="/hyphoto/lolita.html">
+                                <img src="https://frankieyuan.com/images/lolita.jpg" alt="">
                                 <h2>Lolita</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/cosplay.html"><img src="https://frankieyuan.com/images/cos.jpg" alt="">
+                            <a href="/hyphoto/cosplay.html">
+                                <img src="https://frankieyuan.com/images/cos.jpg" alt="">
                                 <h2>Cosplay</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/daily.html"><img src="https://frankieyuan.com/images/daily.jpg" alt="">
+                            <a href="/hyphoto/daily.html">
+                                <img src="https://frankieyuan.com/images/daily.jpg" alt="">
                                 <h2>Daily</h2>
+                            </a>
+                        </span>
+                    </div>
+                    <div class="col-6 col-12-small">
+                        <h3>HYPhoto Scenery Collections</h3>
+                        <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">
+                            My Tuchong
+                            Photo Index
+                        </a>
+                        <p></p>
+                        <span class="image fit">
+                            <a href="hyphoto/lightfiredream.html">
+                                <img src="https://frankieyuan.com/images/disneyfirework.jpg"
+                                     alt="">
+                                <h2>Light, Fire, Dream</h2>
+                            </a>
+                        </span>
+                        <span class="image fit">
+                            <a href="hyphoto/horizon.html">
+                                <img src="https://frankieyuan.com/images/OrlandoSea.jpg" alt="">
+                                <h2>Near the Horizon</h2>
+                            </a>
+                        </span>
+                        <span class="image fit">
+                            <a href="hyphoto/city.html">
+                                <img src="https://frankieyuan.com/images/NYCbridges.jpg" alt="">
+                                <h2>City in my Mind</h2>
+                            </a>
+                        </span>
+                        <span class="image fit">
+                            <a href="hyphoto/uncate.html">
+                                <img src="https://frankieyuan.com/images/airchina.jpg" alt="">
+                                <h2>Cannot be Categorized</h2>
                             </a>
                         </span>
                     </div>
