--- a/hyphoto/jk.html
+++ b/hyphoto/jk.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>JK - Frankie Portrait</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
 <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css">
+    <link rel="stylesheet" href="assets/css/noscript.css">
 </noscript>
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
@@ -14,105 +14,224 @@
 <script src="assets/js/util.js"></script>
 
 <body class="is-preload">
-        <!-- Wrapper -->
-        <div id="wrapper">
-                <!-- Header -->
-                <header id="header">
-                        <h1>
-                                <strong>Frankie Portrait</strong> JK
-                        </h1>
-                        <nav>
-                                <ul>
-                                        <li>
-                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
-                                                        Page</a>
-                                </ul>
-                        </nav>
-                </header>
-                <!-- Main -->
-                <div id="main">
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan3-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan3-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>七七 @Shenzhen Bay</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan2-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan2-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan5-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan5-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan6-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan6-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>谶泽 @CUPL</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily2-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily2-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily3-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily3-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                </div>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header">
+            <h1>
+                <strong>Frankie Portrait</strong> JK
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://frankieyuan.com/photo.html" class="icon fa-home">
+                            Home
+                            Page
+                        </a>
+                </ul>
+            </nav>
+        </header>
+        <!-- Main -->
+        <div id="main">
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool2.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool2.jpg"
+                         alt="">
+                </a>
+                <h2>花不芄 - 旷课天台等你 @UIUC Krannert Performance Center</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool1.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool1.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool3.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool3.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool4.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool4.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool5.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool5.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool6.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool6.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly1.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly1.jpg"
+                         alt="">
+                </a>
+                <h2>小凯莉 @UIUC Japan House</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly2.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly2.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly3.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly3.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two3.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two3.jpg"
+                         alt="">
+                </a>
+                <h2>卉子&花不芄 @UIUC Japan House</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two2.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two2.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan3-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan3-min.jpg"
+                         alt="">
+                </a>
+                <h2>七七 @Shenzhen Bay</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan2-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan2-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan5-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan5-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan6-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan6-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily-min.jpg"
+                         alt="">
+                </a>
+                <h2>谶泽 @CUPL</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily2-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily2-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily3-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily3-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
         </div>
-        <!-- Scripts -->
-        <script src="assets/js/main.js"></script>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
