--- a/me.html
+++ b/me.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>About Me - Hao Yuan (Frankie)</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -25,20 +25,19 @@
     </header>
     <!-- Menu -->
     <nav id="menu">
-      <ul class="links">
-        <li>
-          <a href="index.html">Home</a>
-        <li>
-          <a href="tensorflow.html">Tensorflow Project</a>
-        <li>
-          <a href="peaband.html">Conceptual Wearable Device</a>
-        <li>
-          <a href="vpn/index.html">Vitrual Private Network</a>
-        <li>
-          <a href="photo.html">Photography</a>
-        <li>
-          <a href="me.html">About Me</a>
-      </ul>
+        <ul class="links">
+            <li>
+                <a href="index.html">Home</a>
+            <li><a href="idflakies.html">Flaky Tests Detection Tool</a>
+            <li>
+                <a href="peaband.html">Conceptual Wearable Device</a>
+            <li>
+                <a href="vpn/index.html">Vitrual Private Network</a>
+            <li>
+                <a href="photo.html">Photography</a>
+            <li>
+                <a href="me.html">About Me</a>
+        </ul>
     </nav>
     <!-- Banner -->
     <!-- Note: The "styleN" class below should match that of the header element. -->
