--- a/photo.html
+++ b/photo.html
@@ -28,8 +28,7 @@
             <ul class="links">
                 <li>
                     <a href="index.html">Home</a>
-                <li>
-                    <a href="tensorflow.html">Tensorflow Project</a>
+                <li><a href="idflakies.html">Flaky Tests Detection Tool</a>
                 <li>
                     <a href="peaband.html">Conceptual Wearable Device</a>
                 <li>
