--- a/idflakies.html
+++ b/idflakies.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
-<title>Frankie's TensorFlow Project</title>
+<title>Flaky Tests Detection Tool - Research @UIUC</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css"><noscript>
     <link rel="stylesheet" href="assets/css/noscript.css">
 </noscript>
-<meta name="keywords" content="tensorflow">
-<meta name="description" content="Frankie's Tensorflow Project">
+<meta name="keywords" content="Flaky Tests">
+<meta name="description" content="Research @UIUC">
 <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
@@ -30,11 +30,15 @@
             <section id="one">
                 <div class="inner">
                     <header class="major">
-                        <h1>TensorFlow Project - Planning</h1>
-                        <h3>Road Sign Recognition</h3>
+                        <h1>Flaky Tests Detection Tool</h1>
+                        <h3>Research @UIUC</h3>
                     </header>
-                    <p>This is a planned project to work with TensorFlow and Google Street View and let machine learn to recognize different road signs on the street.
-                </div>
+                    <p>
+                        work with Ph.D. researchers to build a java Continuous Integration testing framework for detecting, classifying, and fixing flaky tests, a type of nondeterministic tests that could pass or fail even when the code under test not changed
+                        <p>Github Repository: github.com/idflakies/iDFlakies
+
+
+</div>
             </section>
         </div><!-- Footer -->
         <footer id="footer">
