--- a/hyphoto/jk.html
+++ b/hyphoto/jk.html
@@ -13,7 +13,7 @@
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 
-<body class="is-preload">
+<body>
     <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
